Restore Variations.UserChannel histogram

The histogram was lost during refactoring to support WebView variations.

Bug: 896699
Change-Id: I011f137205213c773b4f9d84fe18e083cd864812
Reviewed-on: https://chromium-review.googlesource.com/c/1288969
Commit-Queue: Kyle Milka <kmilka@chromium.org>
Commit-Queue: Alexei Svitkine <asvitkine@chromium.org>
Reviewed-by: Alexei Svitkine <asvitkine@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600801}